# epitech.moulinorme

./: .gitignore  Makefile  Makefile.in  configure  configure.ac  test.c
include/: checker.h  config.h  config.h.in  parser.h  parser_states.h
src/: checker.c  lexer.c  lexer.lex  main.c  parser.c  parser.yy  parser_states.c
